--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.477.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "sonner": "^2.0.1",
+    "toaster": "^0.1.2",
+    "tooltip": "^1.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
