--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
